# aws-governance-base

./: .gitignore  README.md  configuration-file-format.md  how-to-deploy.md  how-to-develop.md  package-lock.json  package.json  pyproject.toml  system-requirement.md  tsconfig.json
.devcontainer/: .env  code.dockerfile  devcontainer.json
cfn/auto-remediation/: README.md  vpc-default-security-group-closed.yaml
cfn/common/: README.md  cfn-assets-storage.yaml
cfn/config-rule/: README.md  config-rule.yaml
cfn/detective/: README.md  detective.yaml
cfn/devops-guru/: README.md  devops-guru.yaml
cfn/event-aggregation/: README.md  event-aggregation--event-bus.yaml  event-aggregation--send-event-to-master-role.yaml  event-aggregation--send-event-to-master-rule.yaml  event-bus-source--send-event-to-target-account.yaml  event-bus-target.yaml
cfn/event-notification/: README.md  event-bus-target-guardduty-listener.yaml  event-notification-assume-role-target.yaml  event-notification-config--dev.yaml  event-notification-config.yaml  event-notification-func.yaml  event-notification.yaml
cfn/foo/: foo.yaml
cfn/guard-duty/: README.md  guard-duty.yaml
cfn/iam-access-analyzer/: README.md  iam-access-analyzer.yaml
cfn/jump/: README.md  permissions-boundary.yaml  switch-role-target-role-for-audit.yaml  switch-role-target-role-for-guest.yaml  switch-role-target-role-for-jump.yaml  switch-role-target-role.yaml  switch-role-users-group.yaml
cfn/test/: test.yaml
src/: aws-gov-base-config.ts  consts.ts  credential-provider.ts  deployer.ts  index.ts  logger.ts  util.ts
(+33 files in other folders)
